--- a/humidity.html
+++ b/humidity.html
@@ -38,8 +38,29 @@
       <div class="col-xs-12 col-sm-12 col-md-6">
          <h2>vs. Humidity</h2>
          <a href="#"><img class="img-fluid" src="Fig2.png" alt="Latitude vs. Max Temperature" height="500" width="500"></a>
-            </div>
+            
             <p>Most of the cities are located in area with humidity over 60%. The reason is more people living the cities which require more water supply. So, cities are usually built by rivers, lakes, bay, or seashore. There are only very limited number of cities located in area with humidity below 20%.</p>
-</body>
+        </div>
+        <div class="row">
+                <div class="col-lg-4" id="vizbox">
+                    <div class="row">
+                            <h2>Visualizations</h2>
+                    </div>
+                        <div class="img col-lg-6">
+                            <a href="maxtemperature.html"><img src="Fig1.png"alt="Latitude vs Max Temperature" style=" width="200px" height="150px"></a>
+                        </div>
+                
+                        <div class="img col-lg-6"> 
+                            <a href="Humidity.html"><img src="Fig2.png" alt="Latitude vs Humidity" style="width="200px" height="150px"></a>
+                         </div>
+                    <div class="row">
+                    </div>
+                 <div class="img col-lg-6">
+                    <a href="Clouds.html"><img src="Fig3.png" alt="Latitude vs Cloudiness" style="width="200px" height="150px"></a>
+                 </div>
+                <div class="img col-lg-6"">
+                    <a href="WindSpeed.html"><img src="Fig4.png" alt="Latitude vs Wind Speed" style="width="200px" height="150px"></a>
+                </div>
+        </body>
 </body>
 </html>
