--- a/maxtemperature.html
+++ b/maxtemperature.html
@@ -37,9 +37,29 @@
       </nav>
       <div class="col-xs-12 col-sm-12 col-md-6">
          <h2>vs. Max Temperature</h2>
-         <a href="#"><img class="img-fluid" src="Fig1.png" alt="Latitude vs. Max Temperature" height="500" width="500"></a>
-            </div>
+         <a href="maxtemperature.html"><img class="img-fluid" src="Fig1.png" alt="Latitude vs. Max Temperature" height="500" width="500"></a>
         <p>As expected, the weather becomes significantly warmers as one approaches the equator (Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
-</body>
+    </div>
+    <div class="row">
+            <div class="col-lg-4" id="vizbox">
+                <div class="row">
+            <h2>Visualizations</h2>
+                </div>
+                    <div class="img col-lg-6">
+                        <a href="maxtemperature.html"><img src="Fig1.png"alt="Latitude vs Max Temperature" style=" width="200px" height="150px"></a>
+                    </div>
+            
+                    <div class="img col-lg-6"> 
+                        <a href="Humidity.html"><img src="Fig2.png" alt="Latitude vs Humidity" style="width="200px" height="150px"></a>
+                     </div>
+                <div class="row">
+                </div>
+                    <div class="img col-lg-6">
+                        <a href="Clouds.html"><img src="Fig3.png" alt="Latitude vs Cloudiness" style="width="200px" height="150px"></a>
+                    </div>
+                     <div class="img col-lg-6"">
+                        <a href="WindSpeed.html"><img src="Fig4.png" alt="Latitude vs Wind Speed" style="width="200px" height="150px"></a>
+                    </div>
+    </body>
 </body>
 </html>
