--- a/windspeed.html
+++ b/windspeed.html
@@ -24,7 +24,7 @@
               <div class="nav navbar-nav navbar-right">
                   <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Plots<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                          <li><a href="temperature.html">Max Temperature</a></li>
+                          <li><a href="maxtemperature.html">Max Temperature</a></li>
                           <li><a href="humidity.html">Humidity</a></li>
                           <li><a href="cloudiness.html">Cloudiness</a></li>
                           <li><a href="windspeed.html">Wind Speed</a></li>
@@ -39,7 +39,29 @@
          <h2>vs. Wind Speed</h2>
        <a href="#"><img class="img-fluid" src="Fig4.png" alt="Latitude vs. Wind Speed" height="500" width="500"></a>
  <p>From City Latitude vs Wind Speed chart, we can tell most of cities are located in area with wind speed below 10mph. There is no city located in area with wind speed above 15mph. There is no direct relationship between wind speed and latitude.</p>
-    </div>     
+    </div>  
+    <div class="row">
+        <div class="col-lg-4" id="vizbox">
+            <div class="row">
+                    <h2>Visualizations</h2>
+            </div>
+                <div class="img col-lg-6">
+                    <a href="maxtemperature.html"><img src="Fig1.png"alt="Latitude vs Max Temperature" style=" width="200px" height="150px"></a>
+                </div>
+        
+                <div class="img col-lg-6"> 
+                    <a href="Humidity.html"><img src="Fig2.png" alt="Latitude vs Humidity" style="width="200px" height="150px"></a>
+                 </div>
+            <div class="row">
+            </div>
+         <div class="img col-lg-6">
+            <a href="Clouds.html"><img src="Fig3.png" alt="Latitude vs Cloudiness" style="width="200px" height="150px"></a>
+         </div>
+        <div class="img col-lg-6"">
+            <a href="WindSpeed.html"><img src="Fig4.png" alt="Latitude vs Wind Speed" style="width="200px" height="150px"></a>
+        </div>
+  
+</div> 
 </body>
 </body>
 </html>
