--- a/cloudiness.html
+++ b/cloudiness.html
@@ -24,7 +24,7 @@
               <div class="nav navbar-nav navbar-right">
                   <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Plots<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                          <li><a href="temperature.html">Max Temperature</a></li>
+                          <li><a href="maxtemperature.html">Max Temperature</a></li>
                           <li><a href="humidity.html">Humidity</a></li>
                           <li><a href="cloudiness.html">Cloudiness</a></li>
                           <li><a href="windspeed.html">Wind Speed</a></li>
@@ -35,11 +35,33 @@
               </div>
           </div>
       </nav>
+      <div class="hcss"></div> 
       <div class="col-xs-12 col-sm-12 col-md-6">
          <h2>vs. Cloudiness</h2>
          <a href="#"><img class="img-fluid" src="Fig3.png" alt="Latitude   vs. Cloudiness" height="500" width="500"></a>
   <p>From City Latitude vs Cloudiness, it doesn’t look like any direct relationship between latitude and cloudiness.</p>
         </div>
+        <div class="row">
+                <div class="col-lg-4" id="vizbox">
+                    <div class="row">
+                            <h2>Visualizations</h2>
+                    </div>
+                        <div class="img col-lg-6">
+                            <a href="maxtemperature.html"><img src="Fig1.png"alt="Latitude vs Max Temperature" style=" width="200px" height="150px"></a>
+                        </div>
+                
+                        <div class="img col-lg-6"> 
+                            <a href="Humidity.html"><img src="Fig2.png" alt="Latitude vs Humidity" style="width="200px" height="150px"></a>
+                         </div>
+                    <div class="row">
+                    </div>
+                 <div class="img col-lg-6">
+                    <a href="Clouds.html"><img src="Fig3.png" alt="Latitude vs Cloudiness" style="width="200px" height="150px"></a>
+                 </div>
+                <div class="img col-lg-6"">
+                    <a href="WindSpeed.html"><img src="Fig4.png" alt="Latitude vs Wind Speed" style="width="200px" height="150px"></a>
+                </div>    
+</body>
 </body>
 </body>
 </html>
